fix overflow-hidden

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -96,7 +96,7 @@ h4 {
   background: var(--white);
 }
 
-.owerflow-hiden {
+.owerflow-hidden {
   overflow: hidden;
 }
 
